package com.designpatterns.notification;

public interface NotificationService {
    void notify(String message);
}
